tests/cases/standard-library/errors/format/format-precision-nonfloat.ari
fn main() -> i64 {
  println("{:.2}", 12);
  return 0;
}
